JE working but authorship and approval is not

--- a/finance_system_v1/fms/templates/journal_entries.html
+++ b/finance_system_v1/fms/templates/journal_entries.html
@@ -246,7 +246,7 @@ block head %}
               <select class="form-select" aria-label="Book Type Dropdown" name="bookType">
                 <option selected disabled>Select Book</option>
                 {% for book in list_of_books %}
-                  <option value="{{ book['book_name'] }}">{{ book['book_name'] }}</option>
+                  <option value="{{ book['book_id'] }}">{{ book['book_name'] }}</option>
                 {% endfor %}
               </select>
             </div>
@@ -332,7 +332,7 @@ block head %}
 <template id="newRowTemplate">
   <tr>
     <td>
-      <select class="form-select account-code-dropdown" aria-label="Account Code Dropdown">
+      <select class="form-select account-code-dropdown" aria-label="Account Code Dropdown" name="account_code[]">
         <option selected disabled>Select Account Code</option>
         {% for account in list_of_accounts %}
         <option value="{{ account['account_code'] }}">{{ account['account_code'] }}</option>
@@ -340,7 +340,7 @@ block head %}
       </select>
     </td>
     <td>
-      <select class="form-select account-description-dropdown" aria-label="Account Description Dropdown">
+      <select class="form-select account-description-dropdown" aria-label="Account Description Dropdown" name="account_description[]">
         <option selected disabled>Select Account Description</option>
         {% for account in list_of_accounts %}
         <option value="{{ account['account_code'] }}">{{ account['account_description'] }}</option>
@@ -348,13 +348,13 @@ block head %}
       </select>
     </td>
     <td>
-      <input type="number" class="form-control debit_amount" step="0.01" placeholder="Debit" autocomplete="off"/>
+      <input type="number" class="form-control debit_amount" step="0.01" placeholder="Debit" name="debit[]" autocomplete="off"/>
     </td>
     <td>
-      <input type="number" class="form-control credit_amount" step="0.01" placeholder="Credit" autocomplete="off"/>
+      <input type="number" class="form-control credit_amount" step="0.01" placeholder="Credit" name="credit[]" autocomplete="off"/>
     </td>
     <td>
-      <textarea class="form-control" rows="1" id="particulars" placeholder="Particulars" autocomplete="off"></textarea>
+      <textarea class="form-control" rows="1" id="particulars" placeholder="Particulars" autocomplete="off" name="particulars[]"></textarea>
     </td>
     <td>
       <button class="btn btn-danger remove-row text-center">x</button>
