--- a/finance_system_v1/fms/templates/manage_users.html
+++ b/finance_system_v1/fms/templates/manage_users.html
@@ -17,19 +17,6 @@ head %}
   <h1 class="page-title">Manage Users</h1>
 </div>
 
-<form method="POST" action="{{ url_for('manage_users.add_user') }}">
-  <input type="text" name="username" placeholder="Username" required />
-  <input type="password" name="password" placeholder="Password" required />
-
-  <select name="role_id">
-    {% for role in roles %}
-    <option value="{{ role.role_id }}">{{ role.role_name }}</option>
-    {% endfor %}
-  </select>
-
-  <button type="submit">Add User</button>
-</form>
-
 <table id="example" class="nowrap cell-border" style="width: 100%">
   <thead>
     <tr>
@@ -46,6 +33,7 @@ head %}
   </thead>
   <tbody></tbody>
 </table>
+<button type="button" class="btn btn-danger">Add User</button>
 
 {% endblock %} {% block scripts %}
 <script src="{{ url_for('static', filename='scripts/manage_users.js') }}"></script>
